--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -38,7 +38,7 @@ h2 {
 }
 
 h3 {
-  font-size: $type-size-5;
+  font-size: $type-size-5; 
 }
 
 h4 {
@@ -79,6 +79,7 @@ del a {
 p, pre, blockquote, ul, ol, dl, figure, table, fieldset {
   orphans: 3;
   widows: 3;
+  text-align: justify
 }
 
 /* abbreviations */
