--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -45,7 +45,7 @@
       <button type="button" class="btn btn-primary btn-sm" onclick=" window.open('{{post.paperurl}}','_blank')">Paper</button>
       {% endif %}
       {% if post.posturl %}
-      <button type="button" class="btn btn-primary btn-sm" onclick=" window.open('{{post.posturl}}','_blank')">Paper</button>
+      <button type="button" class="btn btn-primary btn-sm" onclick=" window.open('{{post.posturl}}','_blank')">Poster</button>
       {% posturl %}
       </p> 
       {% endif %}
